# nRF_Connect_APPs

central_uart_DMQ/: CMakeLists.txt
central_uart_DMQ/src/: APP_Config.h  Client_BLE_Machine.c  Client_BLE_Machine.h  main.c
peripheral_hids_keyboard_UART/: CMakeLists.txt  prj.conf  ubx_bmd340eval_nrf52840.overlay
peripheral_hids_keyboard_UART/src/: APP_conf.h  ble_machine.c  ble_machine.h  gpios_leds.c  gpios_leds.h  main.c  uart_machine.h
peripheral_uart_DMQ/: CMakeLists.txt  prj.conf
peripheral_uart_DMQ/src/: app_config.h  ble_machine.c  ble_machine.h  dmq_nus_service.c  dmq_nus_service.h  main.c  uart_machine.c  uart_machine.h
